Bug 1587960 - Replace StreamListenerParent's channel on internal redirects r=asuth,mattwoodrow,kmag

Differential Revision: https://phabricator.services.mozilla.com/D52101